--- a/test.html
+++ b/test.html
@@ -7,10 +7,6 @@
 	<link rel="stylesheet" href="">
 </head>
 <body>
-<<<<<<< HEAD
-	<h1>Tùng Ga ,tùng nuhwu con gà thật </h1>
-=======
-	<h1>Tùng Ga, như con gà  </h1>
->>>>>>> ea4a28b49eca4de9d8939cd6f8f2d0184ffe6ec3
+	<h1>Tùng Ga ,tùng nuhwu con gà thật , abc </h1>
 </body>
 </html>
